@@ -22,6 +22,7 @@ AC_SUBST(SONAMEFLAG)
 AC_SUBST(SOWHOLEARCHIVE)
 AC_SUBST(LD_RUN_PATH)
 
+if text -z "$LIBDB"; then LIBDB=db; fi
 if test -z "$CIFLAGS" -a ! -z "$CPPFLAGS"; then CIFLAGS="$CPPFLAGS"; fi
 
 AC_ARG_ENABLE(mt, [  --enable-mt		  Enable Multi-threading],
@@ -107,12 +108,14 @@ AC_CHECK_LIB(socket, socket,
 AC_CHECK_LIB(nsl, t_bind,
 	     [NETLIBS="$NETLIBS -lnsl"]
 	     AC_DEFINE(HAVE_LIBNSL))
-AC_CHECK_LIB(db, db_create)
+AC_CHECK_LIB($LIBDB, db_create,
+	     LIBS="-l$LIBDB $LIBS"; HAVEDB=yes,
+	     HAVEDB=no)
 
 AC_CHECK_HEADERS(db.h)
 
 AC_MSG_CHECKING(Whether environment is sane)
-if test "$ac_cv_lib_db_db_create" = "yes"; then
+if test "$HAVEDB" = "yes"; then
    AC_MSG_RESULT(library ok);
 else
    AC_MSG_RESULT(Cannot find db library.  Aborted);
